# contest-ninja

./: Cargo.toml  LICENSE  README.md
src/: main.rs  tester.rs
