[package]
name = "contest-ninja"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
glob = "0.3"
log = "0.4"
itertools = "0.8"
simple_logger = "2.1"
serde_json = "1"
